--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
         <activity
+            android:name=".views.ui.chatRoom.ChatRoom"
+            android:exported="false" />
+        <activity
             android:name=".views.ui.BaseActivity"
             android:exported="true"
-            android:theme="@style/Theme.Material3.DayNight.NoActionBar"
-            >
+            android:theme="@style/Theme.Material3.DayNight.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,8 +29,7 @@
         </activity>
         <activity
             android:name=".views.HomeActivity"
-            android:exported="false"
-            />
+            android:exported="false" />
     </application>
 
 </manifest>
