--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,12 +37,12 @@ android {
 
 dependencies {
 
-
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.emoji:emoji-bundled:1.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -79,5 +79,17 @@ dependencies {
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+   // Dagger dependency-injection
+    implementation 'com.google.dagger:dagger:2.28.3'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.28.3'
+
+
+//    implementation "com.vanniktech:emoji-google:0.15.0"
+    implementation "com.vanniktech:emoji-google-compat:0.15.0"
+//    implementation "com.vanniktech:emoji-facebook:0.15.0"
+//    implementation "com.vanniktech:emoji-ios:0.15.0"
+
+
 
 }
