--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.chatapp"
-        minSdk 21
+        minSdk 26
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -64,10 +64,6 @@ dependencies {
     //Picasso
     implementation("com.squareup.picasso:picasso:2.71828")
 
-    //Glide to load image
-    implementation 'com.github.bumptech.glide:glide:4.14.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.1'
-
     //socket
     implementation ('io.socket:socket.io-client:2.0.0')
     //recyclerView
@@ -86,11 +82,19 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    //Dagger
     def dagger_version = "2.40"
+    def room_version = "2.4.3"
+
+    //Dagger
     implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
+    //Emojis
     implementation "com.vanniktech:emoji-google-compat:0.15.0"
-
+    
+    //Room
+    implementation("androidx.room:room-runtime:$room_version")
+    kapt "androidx.room:room-compiler:$room_version"
+    //Kotlin Extensions and Coroutines support for Room
+    implementation("androidx.room:room-ktx:$room_version")
 }
