--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,4 +97,9 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     //Kotlin Extensions and Coroutines support for Room
     implementation("androidx.room:room-ktx:$room_version")
+
+    def mockkVersion = "1.12.2"
+    testImplementation "io.mockk:mockk:$mockkVersion"
+
+
 }
