--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,20 +21,17 @@
         <activity
             android:name=".views.ui.notification.NotificationActivity"
             android:exported="false"
-            android:theme="@style/Theme.Material3.DayNight.NoActionBar"
             />
         <activity
             android:name=".views.ui.browser.BrowserActivity"
-            android:exported="false"
-            android:theme="@style/Theme.Material3.DayNight.NoActionBar" />
+            android:exported="false" />
         <activity
             android:name=".views.ui.chatRoom.ChatRoom"
-            android:exported="false"
-            android:theme="@style/Theme.Material3.DayNight.NoActionBar" />
+            android:exported="false" />
         <activity
             android:name=".views.home.BaseActivity"
             android:exported="true"
-            android:theme="@style/Theme.Material3.DayNight.NoActionBar">
+            android:theme="@style/splashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -43,6 +40,7 @@
         </activity>
         <activity
             android:name=".views.home.HomeActivity"
+            android:theme="@style/Theme.Chatapp_actionBar"
             android:exported="false" />
     </application>
 
