--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Chatapp"
         android:usesCleartextTraffic="true"
-        tools:targetApi="m">
+        >
+        <activity
+            android:name=".views.ui.friend.FriendActivity"
+            android:exported="false" />
         <activity
             android:name=".views.ui.notification.NotificationActivity"
             android:exported="false"
@@ -40,7 +43,6 @@
         </activity>
         <activity
             android:name=".views.home.HomeActivity"
-            android:theme="@style/Theme.Chatapp_actionBar"
             android:exported="false" />
     </application>
 
