--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".views.home.HomeActivity"
+            android:name=".views.main.HomeActivity"
             android:exported="false" />
     </application>
 
