--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,8 @@
         <activity
             android:name=".views.main.MainActivity"
             android:exported="false" />
+
+        <service android:name=".service.MessageService"/>
     </application>
 
 </manifest>
